--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tic-tac-toe",
   "version": "0.1.0",
-  "homepage": "https://chirag2193.github.io/",
+  "homepage": "https://chirag2193.github.io/react-ticTacToe/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
